--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --lightBG: #ffffff;
+  --lightColor: #000000;
+  --darkBG: #000000;
+  --darkColor: #ffffff;
+  --modeBG: var(--lightBG);
+  --modeColor: var(--lightColor);
+}
 * {
   padding: 0;
   margin: 0;
@@ -5,43 +13,79 @@
   font-family: "Roboto Mono", monospace;
 }
 body {
-  background-color: #0083e9;
+  height: 100vh;
+  background: #f9544c;
 }
 .calculator {
-  position: absolute;
-  background-color: #ffffff;
   width: 400px;
-  height: 550px;
+  background-color: var(--modeBG);
+  padding: 10px 30px;
+  position: absolute;
   transform: translate(-50%, -50%);
-  left: 50%;
   top: 50%;
-  padding: 30px;
-  border-radius: 15px;
+  left: 50%;
+  border-radius: 8px;
 }
-input[type="text"] {
-  display: block;
+.display {
   width: 100%;
-  padding: 10px;
+}
+.display input {
+  width: 100%;
+  padding: 5px 10px;
   text-align: right;
-  font-size: 40px;
   border: none;
+  background-color: transparent;
+  color: var(--modeColor);
+  font-size: 35px;
+}
+.display input::placeholder {
+  color: #9490ac;
 }
 .buttons {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-top: 40px;
 }
-input[type="button"] {
-  padding: 5px;
-  margin: 5px;
-  border-radius: 10px;
+.buttons input[type="button"] {
+  font-size: 20px;
+  padding: 17px;
+  border: none;
   background-color: transparent;
-  border: none;
-  font-size: 16px;
+  color: var(--modeColor);
+  cursor: pointer;
+  border-radius: 5px;
 }
-input[value="AC"] {
-  grid-column: 3/4;
-  background-color: #0083e9;
-  border: none;
-  color: #ffffff;
-  padding: 10px;
+.buttons input[type="button"]:hover {
+  box-shadow: 0 8px 25px var(--modeColor);
+}
+input[type="button"]#equal {
+  grid-row: span 2;
+  background-color: #f9544c;
+}
+input[type="button"][value="0"] {
+  grid-column: span 2;
+}
+#dark-switch {
+  margin-top: 20px;
+  appearance: none;
+  position: relative;
+  height: 30px;
+  width: 50px;
+  background-color: #f9544c;
+  border-radius: 20px;
+}
+#dark-switch::before {
+  content: "";
+  position: absolute;
+  background-color: #ffffff;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  top: 5px;
+  left: 5px;
+}
+#dark-switch:checked:before {
+  background-color: var(--darkBG);
+  left: 25px;
 }
