--- a/style.css
+++ b/style.css
@@ -1,91 +1,39 @@
-:root {
-  --lightBG: #ffffff;
-  --lightColor: #000000;
-  --darkBG: #000000;
-  --darkColor: #ffffff;
-  --modeBG: var(--lightBG);
-  --modeColor: var(--lightColor);
-}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Roboto Mono", monospace;
+  font-family: "Poppins", sans-serif;
 }
 body {
-  height: 100vh;
-  background: #f9544c;
+  background-color: #0092fd;
 }
-.calculator {
-  width: 400px;
-  background-color: var(--modeBG);
-  padding: 10px 30px;
+.container {
+  width: min(500px, 90vw);
+  background-color: #ffffff;
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  border-radius: 8px;
+  padding: 3rem;
+  border-radius: 0.8em;
 }
-.display {
-  width: 100%;
+h1 {
+  font-size: 2em;
+  margin-bottom: 1em;
 }
-.display input {
-  width: 100%;
-  padding: 5px 10px;
-  text-align: right;
+input {
+  width: 60%;
+  border: 1px solid #000000;
+  padding: 1em;
+  border-radius: 0.7em;
+}
+button {
+  background-color: #0092fd;
+  color: #ffffff;
   border: none;
-  background-color: transparent;
-  color: var(--modeColor);
-  font-size: 35px;
-}
-.display input::placeholder {
-  color: #9490ac;
-}
-.buttons {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-  margin-top: 40px;
-}
-.buttons input[type="button"] {
-  font-size: 20px;
-  padding: 17px;
-  border: none;
-  background-color: transparent;
-  color: var(--modeColor);
-  cursor: pointer;
-  border-radius: 5px;
-}
-.buttons input[type="button"]:hover {
-  box-shadow: 0 8px 25px var(--modeColor);
-}
-input[type="button"]#equal {
-  grid-row: span 2;
-  background-color: #f9544c;
-}
-input[type="button"][value="0"] {
-  grid-column: span 2;
-}
-#dark-switch {
-  margin-top: 20px;
-  appearance: none;
-  position: relative;
-  height: 30px;
-  width: 50px;
-  background-color: #f9544c;
-  border-radius: 20px;
-}
-#dark-switch::before {
-  content: "";
-  position: absolute;
-  background-color: #ffffff;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  top: 5px;
-  left: 5px;
-}
-#dark-switch:checked:before {
-  background-color: var(--darkBG);
-  left: 25px;
+  width: 38%;
+  border-radius: 0.7em;
+  padding: 1em;
+  font-size: 0.8em;
 }
